--- a/mods/sovra/sequences/ships.yaml
+++ b/mods/sovra/sequences/ships.yaml
@@ -3,6 +3,12 @@ ss:
 		Filename: ss.shp
 		Facings: 16
 		InterpolatedFacings: 32
+    turret:
+        Filename: sstur.shp
+        Facings: 16
+	muzzle:
+		Filename: gunfire2.shp
+		Length: *
 	icon:
 		Filename: ssicon.shp
 
@@ -67,3 +73,14 @@ msub:
 		InterpolatedFacings: 32
 	icon:
 		Filename: msubicon.shp
+
+seas:
+	idle:
+        Filename: seas.shp
+		Facings: 16
+		InterpolatedFacings: 32
+	muzzle:
+		Filename: gunfire2.shp
+		Length: 5
+	icon:
+		Filename: seasicon.shp
