--- a/mods/sovra/sequences/infantry.yaml
+++ b/mods/sovra/sequences/infantry.yaml
@@ -941,6 +941,10 @@ gnrl:
 		Start: 136
 		Length: 2
 		Facings: 8
+	liedown:
+		Start: 88
+		Length: 2
+		Facings: 8
 	prone-shoot:
 		Start: 152
 		Length: 4
@@ -983,6 +987,45 @@ gnrl:
 		Length: 6
 		Tick: 1600
 		ZOffset: -511
+	garrison-muzzle: minigun
+		Filename:
+		Length: 12
+		Facings: 8
+		Combine:
+			0:
+				Filename: minigun.shp
+				Length: 12
+				Frames: 0,1,2,3,4,5,0,1,2,3,4,5
+			1:
+				Filename: minigun.shp
+				Length: 12
+				Frames: 6,7,8,9,10,11,6,7,8,9,10,11
+			2:
+				Filename: minigun.shp
+				Length: 12
+				Frames: 12,13,14,15,16,17,12,13,14,15,16,17
+			3:
+				Filename: minigun.shp
+				Length: 12
+				Frames: 18,19,20,21,22,23,18,19,20,21,22,23
+			4:
+				Filename: minigun.shp
+				Length: 12
+				Frames: 24,25,26,27,28,29,24,25,26,27,28,29
+			5:
+				Filename: minigun.shp
+				Length: 12
+				Frames: 30,31,32,33,34,35,30,31,32,33,34,35
+			6:
+				Filename: minigun.shp
+				Length: 12
+				Frames: 36,37,38,39,40,41,36,37,38,39,40,41
+			7:
+				Filename: minigun.shp
+				Length: 12
+				Frames: 42,43,44,45,46,47,42,43,44,45,46,47
+	icon:
+		Filename: volkicon.shp
 
 shok:
 	Defaults:
