--- a/mods/sovra/sequences/structures.yaml
+++ b/mods/sovra/sequences/structures.yaml
@@ -420,6 +420,7 @@ hpad:
 			SNOW: bib3.sno
 			DESERT: bib3.des
 		Length: *
+        ZOffset: -1022
 	icon:
 		Filename: hpadicon.shp
 	fake-icon:
