--- a/mods/sovra/sequences/structures.yaml
+++ b/mods/sovra/sequences/structures.yaml
@@ -926,3 +926,38 @@ cycl:
 	damaged-idle:
 		Start: 16
 		Length: 16
+
+ercc:
+	Defaults:
+		Filename: ercc.shp
+	idle:
+		Offset: 2, 3
+		ZOffset: -1c511
+	damaged-idle:
+		Offset: 2, 3
+		ZOffset: -1c511
+		Start: 1
+	idle-top:
+		Filename: ercc-top.shp
+		Offset: 2, 3
+		ZOffset: 0c912
+		Start: 0
+	damaged-top:
+		Filename: ercc-top.shp
+		Offset: 2, 3
+		ZOffset: 0c912
+		Start: 1
+	make:
+		Filename: erccmake.shp
+		Offset: 5, -1
+		Length: *
+	bib:
+		Filename: bib2.tem
+		TilesetFilenames:
+			SNOW: bib2.sno
+			DESERT: bib2.des
+		Offset: 2, 8
+		ZOffset: -1c612
+		Length: *
+	icon:
+		Filename: procicon.shp
