--- a/mods/sovra/sequences/vehicles.yaml
+++ b/mods/sovra/sequences/vehicles.yaml
@@ -310,7 +310,8 @@ ttnk:
 		UseClassicFacings: True
 	spinner:
 		Start: 32
-		Length: 32
+		Length: 18
+        ZOffset: -511
 	icon:
 		Filename: ttnkicon.shp
 
