GAP spin speed decrease
slow down the gap spinner a little

--- a/mods/sovra/sequences/structures.yaml
+++ b/mods/sovra/sequences/structures.yaml
@@ -911,10 +911,12 @@ gap:
 	idle:
 		Length: 32
 		Offset: 0,-14
+        Tick: 45
 	damaged-idle:
 		Start: 32
 		Length: 32
 		Offset: 0,-14
+        Tick: 45
 	make:
 		Filename: gapmake.shp
 		Length: *
