Cloak pause on Invulnerability
Submarines, Phase Transport, Camo Pillbox cannot cloak while affected by Invulnerability from Iron Curtain.

--- a/mods/sovra/rules/defaults.yaml
+++ b/mods/sovra/rules/defaults.yaml
@@ -568,7 +568,7 @@
 		UncloakSound: subshow1.aud
 		CloakedCondition: underwater
 		Palette: submerged
-		PauseOnCondition: cloak-force-disabled || crossing-ford || pinged
+		PauseOnCondition: cloak-force-disabled || crossing-ford || pinged || invulnerability
 	GrantConditionOnDamageState@UNCLOAK:
 		Condition: cloak-force-disabled
 		ValidDamageStates: Critical
