--- a/mods/sovra/sequences/misc.yaml
+++ b/mods/sovra/sequences/misc.yaml
@@ -702,14 +702,7 @@ minv:
 		Filename: minv.shp
 		ZOffset: -512
     idle2:
-		Filename: mins.shp
-		ZOffset: -512
-	icon:
-		Filename: jmin.shp
-
-mins:
-	idle:
-		Filename: mins.shp
+		Filename: minv-float.shp
 		ZOffset: -512
 	icon:
 		Filename: jmin.shp
