--- a/mods/sovra/sequences/ships.yaml
+++ b/mods/sovra/sequences/ships.yaml
@@ -3,12 +3,9 @@ ss:
 		Filename: ss.shp
 		Facings: 16
 		InterpolatedFacings: 32
-    turret:
-        Filename: sstur.shp
-        Facings: 16
 	muzzle:
 		Filename: gunfire2.shp
-		Length: *
+		Length: 2
 	icon:
 		Filename: ssicon.shp
 
