--- a/mods/sovra/sequences/ships.yaml
+++ b/mods/sovra/sequences/ships.yaml
@@ -81,3 +81,11 @@ seas:
 		Length: 5
 	icon:
 		Filename: seasicon.shp
+
+engb:
+	idle:
+        Filename: engb.shp
+		Facings: 16
+		InterpolatedFacings: 32
+	icon:
+		Filename: engbicon.shp
